--- a/bower.json
+++ b/bower.json
@@ -15,8 +15,10 @@
     "tests"
   ],
   "dependencies": {
-    "requirejs": "~2.1.9",
     "sass-bootstrap": "~3.0.2",
-    "backbone": "~1.1.0"
+    "jquery": "~2.0.3",
+    "backbone": "~1.1.0",
+    "requirejs": "~2.1.9",
+    "underscore": "~1.5.2"
   }
 }
