--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
     "jquery": "~2.0.3",
     "backbone": "~1.1.0",
     "requirejs": "~2.1.9",
-    "underscore": "~1.5.2"
+    "underscore": "~1.5.2",
+    "mocha": "~1.14.0"
   }
 }
