--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,7 @@
     "backbone": "~1.1.0",
     "requirejs": "~2.1.9",
     "underscore": "~1.5.2",
-    "mocha": "~1.14.0"
+    "mocha": "~1.14.0",
+    "chai": "~1.8.1"
   }
 }
