--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "devDependencies": {
     "docco": "~0.6.2",
     "grunt": "~0.4.1",
-    "grunt-gh-pages": "~0.8.1"
+    "grunt-gh-pages": "~0.8.1",
+    "grunt-contrib-copy": "~0.4.1"
   }
 }
