--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,7 @@
     "mocha": "~1.14.0",
     "chai": "~1.8.1",
     "jquery": "~2.0.3",
-    "normalize.scss": "~2.1.3"
+    "normalize.scss": "~2.1.3",
+    "requirejs-text": "~2.0.10"
   }
 }
