--- a/bower.json
+++ b/bower.json
@@ -18,10 +18,10 @@
     "backbone": "~1.1.0",
     "requirejs": "~2.1.9",
     "underscore": "~1.5.2",
-    "mocha": "~1.14.0",
     "chai": "~1.8.1",
     "jquery": "~2.0.3",
     "normalize.scss": "~2.1.3",
-    "requirejs-text": "~2.0.10"
+    "requirejs-text": "~2.0.10",
+    "mocha": "~1.14.0"
   }
 }
