--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,7 @@
     "jquery": "~2.0.3",
     "normalize.scss": "~2.1.3",
     "requirejs-text": "~2.0.10",
-    "mocha": "~1.14.0"
+    "mocha": "~1.14.0",
+    "when": "~2.6.0"
   }
 }
