--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "phantomjs": "~1.9.2-4",
     "grunt-shell": "~0.6.1",
     "mocha": "~1.14.0",
-    "grunt-contrib-watch": "~0.5.3"
+    "grunt-contrib-watch": "~0.5.3",
+    "grunt-contrib-connect": "~0.6.0"
   }
 }
