--- a/package.json
+++ b/package.json
@@ -1,15 +1,29 @@
 {
   "name": "lnu-ria",
-  "version": "0.0.0",
-  "devDependencies": {
-    "docco": "~0.6.2",
-    "grunt": "~0.4.1",
-    "grunt-contrib-copy": "~0.4.1",
-    "mocha-phantomjs": "~3.1.6",
-    "phantomjs": "~1.9.2-4",
-    "grunt-shell": "~0.6.1",
-    "mocha": "~1.14.0",
-    "grunt-contrib-watch": "~0.5.3",
-    "grunt-contrib-connect": "~0.6.0"
-  }
+    "version": "0.0.0",
+    "devDependencies": {
+        "grunt": "~0.4.2",
+        "grunt-cli": "~0.1.9",
+        "karma": "~0.10.9",
+        "karma-mocha": "~0.1.1",
+        "karma-script-launcher": "~0.1.0",
+        "karma-chrome-launcher": "~0.1.2",
+        "karma-firefox-launcher": "~0.1.3",
+        "karma-html2js-preprocessor": "~0.1.0",
+        "karma-jasmine": "~0.1.5",
+        "karma-coffee-preprocessor": "~0.1.3",
+        "karma-requirejs": "~0.2.1",
+        "karma-phantomjs-launcher": "~0.1.2",
+        "grunt-karma": "~0.6.2",
+        "docco": "~0.6.2",
+        "mocha": "~1.17.1",
+        "requirejs": "~2.1.11",
+        "mocha-phantomjs": "~3.1.6",
+        "phantomjs": "~1.9.2-4",
+        "grunt-contrib-copy": "~0.4.1",
+        "grunt-contrib-watch": "~0.5.3",
+        "grunt-contrib-connect": "~0.6.0",
+        "grunt-contrib-jshint": "~0.8.0",
+        "grunt-contrib-clean": "~0.5.0"
+    }
 }
